cabal-version:      3.0

name:               zkfold-contracts
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov, Antonio Hernandez
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

common lang
  default-language: Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    ViewPatterns
    AllowAmbiguousTypes
    FlexibleContexts
    RankNTypes
    TypeApplications
    DataKinds
    InstanceSigs
    MultiParamTypeClasses
    RecordWildCards
    ScopedTypeVariables
    FlexibleInstances
    NoImplicitPrelude
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  exposed-modules:
    ZkFold.Cardano.UPLC.Common
    ZkFold.Cardano.UPLC.ForwardingScripts
    ZkFold.Cardano.UPLC.PlonkVerifierToken
    ZkFold.Cardano.UPLC.Rollup
    ZkFold.Cardano.UPLC.RollupData
    ZkFold.Cardano.UPLC.RollupDeposit
    ZkFold.Cardano.UPLC.PlonkVerifierTx
    ZkFold.Cardano.UPLC.Wallet
  hs-source-dirs:   src
  build-depends:
    aeson                          ,
    base                >=4.9 && <5,
    bytestring                     ,
    cardano-api                    ,
    containers                     ,
    directory                      ,
    flat                           ,
    plutus-core             ^>=1.36,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    plutus-tx-plugin        ^>=1.36,
    QuickCheck                     ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,

library zkfold-benchmark
  import:           lang
  default-language: Haskell2010
  exposed-modules:
    Bench.Statistics
    Bench.Utils
  hs-source-dirs:   bench/src
  build-depends:
    aeson                          ,
    base                >=4.9 && <5,
    bytestring                     ,
    cardano-api                    ,
    containers                     ,
    directory                      ,
    flat                           ,
    plutus-core             ^>=1.36,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    plutus-tx-plugin        ^>=1.36,
    QuickCheck                     ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,

benchmark bench-cpu-mem
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   bench/bench-cpu-mem
  type:             exitcode-stdio-1.0
  build-depends:
    aeson                          ,
    base                >=4.9 && <5,
    bytestring                     ,
    cardano-api                    ,
    containers                     ,
    directory                      ,
    flat                           ,
    plutus-core             ^>=1.36,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    plutus-tx-plugin        ^>=1.36,
    QuickCheck                     ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-benchmark               ,
    zkfold-contracts               ,

benchmark bench-rollup
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   bench/bench-rollup
  type:             exitcode-stdio-1.0
  build-depends:
    aeson                          ,
    base                >=4.9 && <5,
    bytestring                     ,
    cardano-api                    ,
    containers                     ,
    directory                      ,
    filepath                       ,
    plutus-core             ^>=1.36,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    plutus-tx-plugin        ^>=1.36,
    QuickCheck                     ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-benchmark               ,
    zkfold-contracts               ,
